@@ -151,7 +151,7 @@ public class ArrayColumnMapping extends AbstractColumnMapping
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                        coll = (Collection<Object>) instanceType.newInstance();
+                        coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
